# CppCampusChronicles_HDA

./: cubedfinder  cubedfinder.cpp
Archive_1/: README.md  random.txt
Archive_1/Insurance_Management/: CMakeLists.txt  Versicherung_Aufgabe1.pro  lvschein.h  vschein.h
Archive_1/Lagerverwaltung/: Artikel_func.cpp  Artikel_header.h  CMakeLists.txt  Lagerplatz_func.cpp  Lagerverwaltung_header.h  main.cpp
Archive_1/Magazine_SubscriptionSys/: CMakeLists.txt  abonnent.cpp  zeitung.cpp  zeitung.h
Archive_1/OOAD_P1 (2)/OOAD_P1/: CMakeLists.txt  calculator_test.cpp  main.cpp  token.cpp  token.h
Archive_1/Praktikum5/: CMakeLists.txt  gebaeude.cpp  main.cpp
Archive_1/Probe_BLD/: CMakeLists.txt  kfzschein.h  lvschein.cpp  versicherer.cpp  versicherer.h  vschein.cpp  vschein.h
Archive_1/Smarthome/: CMakeLists.txt  Device_F.cpp  Light_H.h  dimmablelight_H.h
Archive_1/Zeitung/: CMakeLists.txt  abonnent.cpp  main.cpp  zeitungsverlag.h
Archive_1/Zoo_Verwaltung/: CMakeLists.txt  Gehege_F.cpp  Gehege_H.h  Herde_F.cpp  Herde_H.h  README.md  Raubtiere_F.cpp  Raubtiere_H.h  Zooverwaltung_F.cpp  Zooverwaltung_H.h  main.cpp
AutoV_1/AutoV_1/: CMakeLists.txt  autovermietung.cpp  autovermietung.h  fahrt.cpp  mietwagen.cpp  mietwagen.h
Autoermeitung/: autovermeitung.h  main.cpp  mietwagen.h
Battleship/: CMakeLists.txt  Schiff_F.cpp  Schiff_H.h  Ship_F.cpp  Ship_H.h  Spielfeld_H.h  spielfeld_F.cpp
Bsp.zur bidirektionalen Assoziation/: Zeitung_Menue.pro  abonnent.cpp  abonnent.h  main.cpp  zeitung.cpp  zeitung.h  zeitungsverlag.cpp  zeitungsverlag.h
CalculatorProject/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  token.cpp  token.h
CalculatorProject/Tests/: CMakeLists.txt  tst_calculator.cpp
Calculator_Testing/: CMakeLists.txt  CMakeLists.txt.user.a6a71b2  calculator.cpp  main.cpp
Calculator_Testing/build-calc_tester-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  target_wrapper.bat
Calculator_Testing/build-calc_tester-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
Calculator_Testing/build-calc_tester-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QtTest.052E58536D954919.idx  QtTestDepends.996A35A7BD773C95.idx  calculator.cpp.FB76ECCF10DB84D0.idx  calculator.h.0341361A2877F030.idx  deque.tcc.7FDCA88B9C71CA93.idx  qabstractitemmodeltester.h.31A66997A58B9CD1.idx  qbenchmark.h.E53FF3924C52380B.idx  qbenchmarkmetric.h.9B8159362F9BCD77.idx  qcontainerfwd.h.B68196DFAA498A3A.idx  qflags.h.E6E8F0AFB1082235.idx  qlist.h.787C1420C69C2003.idx  qmetatype.h.D345E809160943DC.idx  qobject.h.2002EED7DFCE8163.idx  qtclasshelpermacros.h.3CF6FC98418ED9E6.idx  qtest.h.39A0FA027964CF43.idx  qtestassert.h.11CA4D3270C4A622.idx  qtestcase.h.1DCB1E07B0578D76.idx  qtestdata.h.9FCDEBD8EFB32BFC.idx  qtestsupport_core.h.53C0D6B0BB55C559.idx  qtestsystem.h.D1BDBFE1F5BEFCFB.idx  qtmetamacros.h.A2A7082083EB8B04.idx  qttestversion.h.1040544F46C1E50F.idx  stl_deque.h.700A0F9ED39E2035.idx  stl_stack.h.D2B103828731D361.idx  token.cpp.D0DB1FD72870B3F4.idx  token.h.DAF710928B841AA2.idx  tst_calc_tests.cpp.0B71437F325AB20B.idx  tst_calc_tests.moc.B3B744B022185068.idx  type_traits.EF1DD7E3AB38D0D3.idx
Calculator_Testing/build-calc_tester-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/debug/: calculator.gcda  calculator.gcno  token.gcda  token.gcno  tst_calc_tests.gcda  tst_calc_tests.gcno  tst_calc_tests.moc
Calculator_Testing/calc_tester/: calc_tester.pro  calculator.h  token.cpp  tst_calc_tests.cpp
Callcenter/: CMakeLists.txt  CMakeLists.txt.user.a6a71b2  artztpraxis.cpp  callcenter.cpp  termin.cpp
Campin_place/: Booking_func.cpp  Booking_header.h  CMakeLists.txt  Camping_func.cpp  Camping_header.h  Plot_func.cpp  Plot_header.h  func.cpp  header.h  main.cpp
CampingPlatz/: CMakeLists.txt  Camping_F.cpp  Plot_F.cpp
Cinema/: CMakeLists.txt  book.h  doppelseat.h  seat.cpp
Firma1/: CMakeLists.txt  City_F.cpp  City_H.h  Company_H.h  Company_f.cpp  Human_F.cpp  human_H.h  specialemployee_H.h
Furniture/: Bed_F.cpp  CMakeLists.txt  Furniture_F.cpp  Furniture_H.h  Table_H.h  main.cpp
Gebaude_Sim/: CMakeLists.txt  gebaeude.cpp  gebaeude.h  main.cpp  wohnung.cpp  wohnung.h  zimmer.cpp  zimmer.h
Impfzentrum_Aufgabe5/: Impfzentrum_Aufgabe5.pro  arztpraxis.cpp  arztpraxis.h  callcenter.cpp  main.cpp  termin.cpp
Insurance_Management/: kfzschein.cpp  kfzschein.h  lvschein.cpp  main.cpp  versicherer.cpp  versicherer.h  vschein.cpp
Insurance__Management/: Insurance__Management.pro  kfzschein.h  lvschein.cpp  vschein.h
KDABLabs kdabtv master Qt-Widgets-and-more-UnitTests/: CMakeLists.txt
KDABLabs kdabtv master Qt-Widgets-and-more-UnitTests/Tests/: CMakeLists.txt
Lagerverwaltung/: GefahrgutLagerplatz_func.cpp  Lagerplatz_header.h  Lagerverwaltung_func.cpp  gefahrgutLagerplatz_header.h
Magazine_SubscriptionSys/: abonnent.h  zeitungsverlag.cpp  zeitungsverlag.h
Mensa/: CMakeLists.txt  Mensa_F.cpp  main.cpp  mensa_H.h
NavBase/: GUI_NavBase4.pro.user.988fdbf  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigationssystem.cpp  navigationssystem.h  ort.cpp  ort.h  poi.h  qdynamicbutton.h  resource.qrc
Praktikum5/: gebaeude.h  wohnung.cpp  wohnung.h  zimmer.cpp  zimmer.h
Probe_BLD/: kfzschein.cpp  lvschein.h  main.cpp
Smarthome/: Device_H.h  Light_F.cpp  dimmablelight_F.cpp
StarGate_Mihir/: raumfahrtunternehmen.h  raumgleiter.h
Zeitung/: abonnent.h  zeitung.cpp  zeitung.h  zeitungsverlag.cpp
Zoo_Verwaltung/: CMakeLists.txt  Gehege_F.cpp  Gehege_H.h  Herde_F.cpp  Herde_H.h  Raubtiere_F.cpp  Raubtiere_H.h  Zooverwaltung_F.cpp  Zooverwaltung_H.h  main.cpp
build-Autoermeitung-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-Battleship-Qt_6_5_0_for_macOS-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Callcenter-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  (+3 more)
stargate/: CMakeLists.txt  raumfahrtunternehmen.cpp  raumfahrtunternehmen.h  raumflug.cpp  raumflug.h  raumgleiter.cpp  raumgleiter.h
(+1009 files in other folders)
